# internal/pkg/server/server.go
@@ -28,6 +28,7 @@ type winetService interface {
 type database interface {
 	GetLatestProperties(ctx context.Context) (model.Properties, error)
 	GetProperties(ctx context.Context, identifier, slug string, from, to *time.Time) (model.Properties, error)
+	GetAmberPrices(ctx context.Context, from, to time.Time, site *string) (model.AmberPrices, error)
 }
 
 type server struct {
@@ -36,42 +37,41 @@ type server struct {
 	logger *zap.Logger
 }
 
-// GetProperties implements api.ServerInterface.
-func (s *server) GetProperties(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-	props, err := s.db.GetLatestProperties(ctx)
-	if err != nil {
-		handleError(w, err)
-		return
-	}
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(http.StatusOK)
-	if err := json.NewEncoder(w).Encode(props); err != nil {
-		handleError(w, err)
-		return
-	}
-}
-
-// GetPropertyIdentifierSlug implements api.ServerInterface.
-func (s *server) GetPropertyIdentifierSlug(w http.ResponseWriter, r *http.Request, identifier string, slug string, params api.GetPropertyIdentifierSlugParams) {
-	ctx := r.Context()
-	props, err := s.db.GetProperties(ctx, identifier, slug, params.From, params.To)
-	if err != nil {
-		handleError(w, err)
-		return
-	}
-	if err := json.NewEncoder(w).Encode(props); err != nil {
-		handleError(w, err)
-		return
-	}
-	w.Header().Set("Content-Type", "application/json")
-}
-
 func New(ws winetService, db database) *server {
 	return &server{
 		winets: ws,
 		logger: zap.L(),
 		db:     db,
+	}
+}
+
+func (s *server) GetAmberPricesFromTo(w http.ResponseWriter, r *http.Request, from time.Time, to time.Time, params api.GetAmberPricesFromToParams) {
+	ctx := r.Context()
+	amberPrices, err := s.db.GetAmberPrices(ctx, from, to, params.Site)
+	if err != nil {
+		handleError(w, err)
+		return
+	}
+	w.Header().Set("Content-Type", "application/json")
+	res := []api.AmberPrice{}
+	for _, price := range amberPrices {
+		res = append(res, api.AmberPrice{
+			PerKwh:      price.PerKwh,
+			SpotPerKwh:  price.SpotPerKwh,
+			StartTime:   price.StartTime,
+			EndTime:     price.EndTime,
+			Duration:    price.Duration,
+			Forecast:    price.Forecast,
+			ChannelType: price.ChannelType,
+			CreatedAt:   price.CreatedAt,
+			UpdatedAt:   price.UpdatedAt,
+			Id:          price.ID,
+		})
+	}
+
+	if err := json.NewEncoder(w).Encode(res); err != nil {
+		handleError(w, err)
+		return
 	}
 }
 
@@ -181,4 +181,35 @@ func unmarshalPayload[T any](r *http.Request) (*T, error) {
 		return nil, err
 	}
 	return &out, nil
+}
+
+// GetProperties implements api.ServerInterface.
+func (s *server) GetProperties(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+	props, err := s.db.GetLatestProperties(ctx)
+	if err != nil {
+		handleError(w, err)
+		return
+	}
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusOK)
+	if err := json.NewEncoder(w).Encode(props); err != nil {
+		handleError(w, err)
+		return
+	}
+}
+
+// GetPropertyIdentifierSlug implements api.ServerInterface.
+func (s *server) GetPropertyIdentifierSlug(w http.ResponseWriter, r *http.Request, identifier string, slug string, params api.GetPropertyIdentifierSlugParams) {
+	ctx := r.Context()
+	props, err := s.db.GetProperties(ctx, identifier, slug, params.From, params.To)
+	if err != nil {
+		handleError(w, err)
+		return
+	}
+	if err := json.NewEncoder(w).Encode(props); err != nil {
+		handleError(w, err)
+		return
+	}
+	w.Header().Set("Content-Type", "application/json")
 }
